# webrtc-camera-share

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.example.yml  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/server/: Cargo.toml
apps/server/src/: app.rs  config.rs  lib.rs  main.rs  metrics.rs  room.rs  signal.rs
apps/server/src/domain/: mod.rs  room.rs  signal.rs
apps/server/src/infrastructure/: limits.rs  metrics.rs  mod.rs
apps/server/src/web/: mod.rs  security.rs  static_files.rs  websocket.rs
apps/server/tests/: websocket.rs
apps/web/: .oxlintrc.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
apps/web/e2e/: soak.spec.ts  turn-relay.spec.ts  ui.spec.ts  webrtc.spec.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/ui/: button.tsx  card.tsx  field.tsx  input.tsx  separator.tsx
apps/web/src/features/: browser-environment.test.ts  browser-environment.ts  connection-status.test.ts  connection-status.ts  page-shell.tsx  session-fields.tsx  session.test.ts  session.ts  signaling.test.ts  signaling.ts  status-alert.tsx  video-stage.tsx
apps/web/src/features/about/: about-page.tsx
apps/web/src/features/receiver/: receiver-page.tsx  use-receiver.ts
apps/web/src/features/sender/: sender-page.tsx  use-sender.ts
deploy/caddy/: Caddyfile.example
deploy/coturn/: README.md  turnserver.conf.example
deploy/systemd/: webrtc-camera-share.service.example
docs/: DEPLOYMENT.md  PRODUCT.md
docs/superpowers/plans/: 2026-07-22-reliability-hardening.md
docs/superpowers/specs/: 2026-07-20-reliability-hardening-design.md
public/: recv.html  send.html
scripts/: package_release.py  smoke.py  soak.py
src/: main.ts  rooms.ts  server.ts  signaling.ts
tests/: public-scripts.test.ts  rooms.test.ts  server.test.ts  signaling.test.ts
xtask/: Cargo.toml
xtask/src/: main.rs
